--- a/people_connection_api/src/main/resources/application.properties
+++ b/people_connection_api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=1201
 server.use-forward-headers=true
 server.context-path=/people
+spring.data.mongodb.uri="mongodb://localhost:27017"
+database=images
