--- a/people_connection_api/src/main/resources/application.properties
+++ b/people_connection_api/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=1201
 server.use-forward-headers=true
 server.context-path=/people
 spring.data.mongodb.uri=mongodb://localhost:27017
-database=images
+database=photo_images
